--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Product-class</title>
 </head>
 <body>
-    <script src="/Product.js">
-        
-    </script>
+    <script src="/Product.js"></script>
+    <script src="/app.js"></script>
 </body>
 </html>
